# llama

./: .gitignore  .gitmodules  CMakeLists.txt  PROJECT.md  README.md  diagnose_llama_schema.py  experiment-raw-response.json  experiment-result.json  experiment-task.json  llama-schema-diagnostic.json  pyproject.toml  run_experiment.py  runtime-manifest.json
agent_runtime/: __init__.py  acceptance.py  builtin_tools.py  catalog.py  compiler.py  contracts.py  decision.py  errors.py  event_store.py  events.py  executor.py  flow.py  ids.py  normalization.py  permissions.py  ports.py  reducer.py  resolver.py  service.py
agent_runtime/tool_adapters/: __init__.py  read_file.py  scope.py  search_text.py
config/: inference-runtime-throughput.example.json  inference-runtime.example.json  model.example.json
controlled_inference/: README.md  aggregate_phase_d_languages.py  analyze_phase_b.py  analyze_phase_c.py  analyze_phase_d.py  build_phase_b.ps1  compile_schema_subset.py  controlled_service.py  persistent_worker.cpp  phase_a_observe.py  phase_b_sample.cpp  phase_d_schema.json  phase_e_escape_schema.json  prepare_phase_d_prompt.py  run_phase_c.ps1  run_phase_d.ps1  run_phase_e.py  run_phase_f.ps1  run_phase_g.ps1  test_phase_f_service.py  test_phase_g_persistent.py  test_schema_compiler.py
controlled_inference/phase_d_cases/: auto_en.json  auto_vi.json  en.json  vi.json
docs/: 01-vision.md  02-architecture.md  03-progress-and-roadmap.md  04-session-handoff.md  05-controlled-inference-handoff.md  06-model-worker-v1-plan.md  07-inference-runtime-and-agent-roadmap.md  08-m0-implementation-handoff.md  09-inference-runtime-implementation-handoff.md  model-worker-release.md  model-worker-runbook.md
inference_runtime/: README.md  __init__.py  cache.py  conformance.py  continuous_scheduler.py  contracts.py  governance.py  ports.py  registry.py  router.py  runtime_manifest.py  simulator.py
inference_runtime/adapters/: __init__.py  llama_cpp.py  mlx_lm.py  model_worker.py  openai_compatible.py
model_worker/: __init__.py  artifacts.py  cli.py  context.py  contracts.py  dispatcher.py  errors.py  events.py  http_api.py  ipc.py  maintenance.py  manifest.py  metrics.py  preflight.py  prompt.py  request_registry.py  security.py  strict_json.py  terminal_metrics.py  worker_process.py
model_worker/output_contract/: __init__.py  ast.py  gbnf.py  parser.py  validator.py
native/: generation_safety.cpp  generation_safety.h  inference_runtime_main.cpp  ipc_protocol.cpp  ipc_protocol.h  model_worker_main.cpp  pending_cancel_registry.cpp  pending_cancel_registry.h  reasoning_phase_controller.cpp  reasoning_phase_controller.h  sequence_engine.cpp  sequence_engine.h
native/tests/: test_reasoning_phase_controller.cpp
scripts/: aggregate_inference_priority.py  benchmark_inference_cache.py  benchmark_inference_priority.py  benchmark_inference_runtime.py  build_native_runtime.ps1  build_native_runtime.sh  evaluate_bonsai_quality.py  fetch_runtime.ps1  monitor_resources.py  probe_m7_environment.py  probe_worker.py  release_gate.ps1  soak_inference_runtime.py  soak_worker.py  verify_runtime.py
skills/atomic-worker/: SKILL.md
skills/atomic-worker/agents/: openai.yaml
tests/: conftest.py
tests/gpu/: test_inference_runtime_sequences.py  test_model_release.py  test_native_faults.py
tests/integration/: test_dispatcher_faults.py  test_http_api.py  test_managed_backend_http_conformance.py
tests/integration/agent_runtime_h1/: test_atomic_readonly.py
tests/property/: test_agent_runtime_lifecycle.py  test_agent_runtime_replay.py  test_contract_equivalence.py  test_request_lifecycle.py
tests/property/agent_runtime_h1/: test_id_stability.py
tests/unit/: test_aggregate_inference_priority.py  test_artifact_maintenance.py  test_benchmark_inference_cache.py  test_benchmark_inference_priority.py  test_contracts.py  test_events.py  test_ipc_security_artifacts.py  test_lifecycle_maintenance.py  test_manifest_context.py  test_metrics.py  test_monitor_resources.py  test_output_contract.py  test_request_registry.py  test_runtime_support.py  test_soak_inference_runtime.py  test_soak_worker.py  test_worker_process.py
tests/unit/agent_runtime_h0/: __init__.py  test_catalog.py  test_contracts.py  test_error_branches.py  test_event_store.py  test_reducer.py
tests/unit/agent_runtime_h1/: test_decision_compiler.py  test_gates_and_faults.py
tests/unit/inference_runtime/: test_backend_conformance.py  test_cache.py  test_continuous_scheduler.py  test_governance.py  test_llama_cpp_adapter.py  test_managed_adapters.py  test_mlx_adapter.py  test_model_worker_adapter.py  test_registry_router.py  test_runtime_contracts.py  test_runtime_manifest.py  test_runtime_ports.py  test_scheduler_simulator.py
