[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "model-worker"
version = "1.0.0.dev0"
description = "Single-model, fail-closed llama.cpp inference worker"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.2", "hypothesis>=6.100"]
lint = ["ruff>=0.5"]

[project.scripts]
model-worker = "model_worker.cli:main"
model-worker-validate-manifest = "model_worker.cli:validate_manifest_main"

[tool.setuptools.packages.find]
include = ["model_worker*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["gpu: requires the configured llama.cpp runtime and model", "soak: long-running reliability test"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["E501", "E701", "E702"]
